#66 Sidebar icon alignment fix

--- a/frontend/src/app/component/tool-bar/tool-bar.component.scss
+++ b/frontend/src/app/component/tool-bar/tool-bar.component.scss
@@ -43,7 +43,8 @@
     &:hover {
       width: 65px;
       height: 65px;
-      transform: translate(10px 0);
+      left: -5px;
+      top: -5px;
     }
   }
 }
